--- a/application/views/admin/templates/header.phtml
+++ b/application/views/admin/templates/header.phtml
@@ -16,14 +16,14 @@
         <link rel="shortcut icon" href="#" />
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-        <link rel="stylesheet" type="text/css" href="/public/css/Core.css" media="all" />
-        <link rel="stylesheet" type="text/css" href="/public/css/main.css" media="all" />
-        <script type="text/javascript" src="/public/js/Core.js"></script>
-        <script type="text/javascript" src="/public/js/spinner.js"></script>
+        <link rel="stylesheet" type="text/css" href="<?php echo neoform\assets::instance()->css('Core.css'); ?>" media="all" />
+        <link rel="stylesheet" type="text/css" href="<?php echo neoform\assets::instance()->css('main.css'); ?>" media="all" />
+        <script type="text/javascript" src="<?php echo neoform\assets::instance()->js('Core.js'); ?>"></script>
+        <script type="text/javascript" src="<?php echo neoform\assets::instance()->js('spinner.js'); ?>"></script>
 
         <!-- Dialog -->
-        <link rel="stylesheet" type="text/css" href="/public/css/CoreDialog.css" media="all" />
-        <script type="text/javascript" src="/public/js/CoreDialog.js"></script>
+        <link rel="stylesheet" type="text/css" href="<?php echo neoform\assets::instance()->css('CoreDialog.css'); ?>" media="all" />
+        <script type="text/javascript" src="<?php echo neoform\assets::instance()->js('CoreDialog.js'); ?>"></script>
 
         <!-- Fonts -->
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
